Add reflection access when running some old tests
This is the exception that would have been raised.

java.lang.reflect.UndeclaredThrowableException
	at org.eclipse.cdt.core.cdescriptor.tests.CDescriptorOldTests.testProjectDataCreate(CDescriptorOldTests.java:370)
Caused by: java.lang.IllegalAccessException: class org.eclipse.cdt.internal.core.CConfigBasedDescriptor$1 cannot access class com.sun.org.apache.xerces.internal.dom.ParentNode (in module java.xml) because module java.xml does not export com.sun.org.apache.xerces.internal.dom to unnamed module @772861aa
	at org.eclipse.cdt.core.cdescriptor.tests.CDescriptorOldTests.testProjectDataCreate(CDescriptorOldTests.java:370)

It may be that --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED
can/should be added to the product, similar to linuxtools in
https://github.com/eclipse-linuxtools/org.eclipse.linuxtools/pull/20/files
but as this affects only some special use cases that are probably
not really in existence anymore we are just fixing the tests.

Alternative would be to simply delete these old tests (CDescriptorOldTests)
and surrounding code.